src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__widget_selection_tests__snapshot_first_suggestion_selected.snap
---
source: src/ai/ai_render_tests/widget_selection_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (1/3) claude-3-5-son... ╮ "
"                                                       │                                          █ "
"                                                       │ 1. [Fix] .users[] | select(.active)      █ "
"                                                       │    Filters to only active users          █ "
"                                                       │                                          █ "
"                                                       │ 2. [Query] .items[] | .price             █ "
"                                                       │    Extract prices                        █ "
"                                                       │                                          █ "
"                                                       │ 3. [Optimize] .data | length             █ "
"                                                       │ ──────────────────────────────────────── ║ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰↑↓ Select • Enter Apply Selection • Ctrl+G╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
