src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__widget_selection_tests__snapshot_last_suggestion_selected.snap
---
source: src/ai/ai_render_tests/widget_selection_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (3/3) claude-3-5-son... ╮ "
"                                                       │                                          ║ "
"                                                       │    Filters to only active users          █ "
"                                                       │                                          █ "
"                                                       │ 2. [Query] .items[] | .price             █ "
"                                                       │    Extract prices                        █ "
"                                                       │                                          █ "
"                                                       │ 3. [Optimize] .data | length             █ "
"                                                       │    Count items                           █ "
"                                                       │ ──────────────────────────────────────── █ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰↑↓ Select • Enter Apply Selection • Ctrl+G╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
