src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__widget_selection_tests__snapshot_selected_with_long_description.snap
---
source: src/ai/ai_render_tests/widget_selection_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                       ╭ Anthropic ──── (1/2) claude-3-5-s... ╮ "
"                                       │                                      █ "
"                                       │ 1. [Fix] .users[] | select(.active)  █ "
"                                       │    This is a very long description   █ "
"                                       │    that explains in great detail     █ "
"                                       │    what this query does and why it's █ "
"                                       │    useful for filtering active users █ "
"                                       │    from the dataset.                 █ "
"                                       │                                      ║ "
"                                       │ ──────────────────────────────────── ║ "
"                                       │ ›  Ask about this query or data…     │ "
"                                       │                                      │ "
"                                       ╰ Alt+↑↓ Select • Enter Apply Selection╯ "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
