src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__widget_selection_tests__snapshot_selection_cycling.snap
---
source: src/ai/ai_render_tests/widget_selection_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ────── (2/2) claude-3-5-son... ╮ "
"                                                       │                                          │ "
"                                                       │ 1. [Fix] .first                          │ "
"                                                       │    First                                 │ "
"                                                       │                                          │ "
"                                                       │ 2. [Query] .second                       │ "
"                                                       │    Second                                │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰↑↓ Select • Enter Apply Selection • Ctrl+G╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
