src/ai/ai_render_tests/snapshots/jiq__ai__ai_render_tests__widget_selection_tests__snapshot_single_suggestion_selected.snap
---
source: src/ai/ai_render_tests/widget_selection_tests.rs
expression: output
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                       ╭ Anthropic ───────── claude-3-5-sonnet... ╮ "
"                                                       │                                          │ "
"                                                       │ 1. [Fix] .users[] | select(.active)      │ "
"                                                       │    Filters to only active users          │ "
"                                                       │ ──────────────────────────────────────── │ "
"                                                       │ ›  Ask about this query or data…         │ "
"                                                       │                                          │ "
"                                                       ╰ • Alt+↑↓ Select • Enter Apply Selection •╯ "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
